@@ -9,7 +9,6 @@
 package com.powsybl.cgmes.conversion.elements.transformers;
 
 import com.powsybl.cgmes.conversion.Context;
-import com.powsybl.cgmes.conversion.Conversion;
 import com.powsybl.cgmes.conversion.ConversionException;
 import com.powsybl.cgmes.conversion.RegulatingControlMappingForTransformers.CgmesRegulatingControlPhase;
 import com.powsybl.cgmes.conversion.RegulatingControlMappingForTransformers.CgmesRegulatingControlRatio;
@@ -26,8 +25,7 @@ import com.powsybl.triplestore.api.PropertyBags;
 import java.util.*;
 
 import static com.powsybl.cgmes.conversion.CgmesReports.*;
-import static com.powsybl.cgmes.conversion.Conversion.CGMES_PREFIX_ALIAS_PROPERTIES;
-import static com.powsybl.cgmes.model.CgmesNames.*;
+import static com.powsybl.cgmes.conversion.export.CgmesExportUtil.*;
 
 /**
  * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
@@ -45,8 +43,7 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         boolean isLtcFlag = rtc.isLtcFlag();
         int lowStep = rtc.getLowTapPosition();
         int position = rtc.getTapPosition();
-        Integer solvedPosition = rtc.getSolvedTapPosition();
-        rtca.setLoadTapChangingCapabilities(isLtcFlag).setLowTapPosition(lowStep).setTapPosition(position).setSolvedTapPosition(solvedPosition);
+        rtca.setLoadTapChangingCapabilities(isLtcFlag).setLowTapPosition(lowStep).setTapPosition(position);
 
         rtc.getSteps().forEach(step -> {
             double ratio = step.getRatio();
@@ -72,8 +69,7 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         boolean isLtcFlag = ptc.isLtcFlag();
         int lowStep = ptc.getLowTapPosition();
         int position = ptc.getTapPosition();
-        Integer solvedPosition = ptc.getSolvedTapPosition();
-        ptca.setLoadTapChangingCapabilities(isLtcFlag).setLowTapPosition(lowStep).setTapPosition(position).setSolvedTapPosition(solvedPosition);
+        ptca.setLoadTapChangingCapabilities(isLtcFlag).setLowTapPosition(lowStep).setTapPosition(position);
 
         ptc.getSteps().forEach(step -> {
             double ratio = step.getRatio();
@@ -125,21 +121,21 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         String aliasType;
         for (PropertyBag end : ps) {
             alias = end.getId("TransformerEnd");
-            aliasType = CGMES_PREFIX_ALIAS_PROPERTIES + TRANSFORMER_END + end.getLocal(END_NUMBER);
+            aliasType = getTransformerEndAliasType(end.getLocal(END_NUMBER));
             identifiable.addAlias(alias, aliasType);
         }
 
         // Add RatioTapChangers aliases
         for (PropertyBag rtc : context.ratioTapChangers(identifiable.getId())) {
             alias = rtc.getId("RatioTapChanger");
-            aliasType = CGMES_PREFIX_ALIAS_PROPERTIES + RATIO_TAP_CHANGER + rtc.getLocal(END_NUMBER);
+            aliasType = getRatioTapChangerAliasType(rtc.getLocal(END_NUMBER));
             identifiable.addAlias(alias, aliasType, context.config().isEnsureIdAliasUnicity());
         }
 
         // Add PhaseTapChangers aliases
         for (PropertyBag ptc : context.phaseTapChangers(identifiable.getId())) {
             alias = ptc.getId("PhaseTapChanger");
-            aliasType = CGMES_PREFIX_ALIAS_PROPERTIES + PHASE_TAP_CHANGER + ptc.getLocal(END_NUMBER);
+            aliasType = getPhaseTapChangerAliasType(ptc.getLocal(END_NUMBER));
             identifiable.addAlias(alias, aliasType, context.config().isEnsureIdAliasUnicity());
         }
     }
@@ -173,28 +169,28 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         }
     }
 
-    static <C extends Connectable<C>> void updateRatioTapChanger(Connectable<C> tw, RatioTapChanger rtc, Context context, boolean isRegulatingAllowed) {
+    static <C extends Connectable<C>> void updateRatioTapChanger(C tw, RatioTapChanger rtc, Context context, boolean isRegulatingAllowed) {
         updateRatioTapChanger(tw, rtc, "", context, isRegulatingAllowed);
     }
 
-    static <C extends Connectable<C>> void updateRatioTapChanger(Connectable<C> tw, RatioTapChanger rtc, ThreeSides side, Context context, boolean isRegulatingAllowed) {
+    static <C extends Connectable<C>> void updateRatioTapChanger(C tw, RatioTapChanger rtc, ThreeSides side, Context context, boolean isRegulatingAllowed) {
         updateRatioTapChanger(tw, rtc, String.valueOf(side.getNum()), context, isRegulatingAllowed);
     }
 
-    static <C extends Connectable<C>> void updatePhaseTapChanger(Connectable<C> tw, PhaseTapChanger ptc, Context context, boolean isRegulatingAllowed) {
+    static <C extends Connectable<C>> void updatePhaseTapChanger(C tw, PhaseTapChanger ptc, Context context, boolean isRegulatingAllowed) {
         updatePhaseTapChanger(tw, ptc, "", context, isRegulatingAllowed);
     }
 
-    static <C extends Connectable<C>> void updatePhaseTapChanger(Connectable<C> tw, PhaseTapChanger ptc, ThreeSides side, Context context, boolean isRegulatingAllowed) {
+    static <C extends Connectable<C>> void updatePhaseTapChanger(C tw, PhaseTapChanger ptc, ThreeSides side, Context context, boolean isRegulatingAllowed) {
         updatePhaseTapChanger(tw, ptc, String.valueOf(side.getNum()), context, isRegulatingAllowed);
     }
 
-    private static <C extends Connectable<C>> void updateRatioTapChanger(Connectable<C> tw, RatioTapChanger rtc, String end, Context context, boolean isRegulatingAllowed) {
-        String ratioTapChangerId = findTapChangerId(tw, Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.RATIO_TAP_CHANGER + end);
+    private static <C extends Connectable<C>> void updateRatioTapChanger(C tw, RatioTapChanger rtc, String end, Context context, boolean isRegulatingAllowed) {
+        String ratioTapChangerId = findTapChangerId(tw, getRatioTapChangerAliasType(end));
 
         int defaultTapPosition = getDefaultTapPosition(tw, rtc, ratioTapChangerId, getClosestNeutralStep(rtc), context);
         rtc.setTapPosition(findValidTapPosition(rtc, ratioTapChangerId, defaultTapPosition, context));
-        findValidSolvedTapPosition(rtc, ratioTapChangerId, context).ifPresent(rtc::setSolvedTapPosition);
+        findValidSolvedTapPosition(rtc, ratioTapChangerId, context).ifPresentOrElse(rtc::setSolvedTapPosition, rtc::unsetSolvedTapPosition);
 
         if (rtc.getRegulationTerminal() != null) {
             Optional<PropertyBag> cgmesRegulatingControl = findCgmesRegulatingControl(tw, ratioTapChangerId, context);
@@ -255,12 +251,12 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         }
     }
 
-    private static <C extends Connectable<C>> void updatePhaseTapChanger(Connectable<C> tw, PhaseTapChanger ptc, String end, Context context, boolean isRegulatingAllowed) {
-        String phaseTapChangerId = findTapChangerId(tw, Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.PHASE_TAP_CHANGER + end);
+    private static <C extends Connectable<C>> void updatePhaseTapChanger(C tw, PhaseTapChanger ptc, String end, Context context, boolean isRegulatingAllowed) {
+        String phaseTapChangerId = findTapChangerId(tw, getPhaseTapChangerAliasType(end));
 
         int defaultTapPosition = getDefaultTapPosition(tw, ptc, phaseTapChangerId, getClosestNeutralStep(ptc), context);
         ptc.setTapPosition(findValidTapPosition(ptc, phaseTapChangerId, defaultTapPosition, context));
-        findValidSolvedTapPosition(ptc, phaseTapChangerId, context).ifPresent(ptc::setSolvedTapPosition);
+        findValidSolvedTapPosition(ptc, phaseTapChangerId, context).ifPresentOrElse(ptc::setSolvedTapPosition, ptc::unsetSolvedTapPosition);
 
         if (ptc.getRegulationTerminal() != null) {
             Optional<PropertyBag> cgmesRegulatingControl = findCgmesRegulatingControl(tw, phaseTapChangerId, context);
@@ -343,10 +339,14 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         return tapPosition.isPresent() ? tapPosition.getAsInt() : defaultTapPosition;
     }
 
-    private static <C extends Connectable<C>> int getDefaultTapPosition(Connectable<C> tw, com.powsybl.iidm.network.TapChanger<?, ?, ?, ?> tapChanger, String tapChangerId, int closestNeutralTapPosition, Context context) {
+    private static <C extends Connectable<C>> int getDefaultTapPosition(C tw, com.powsybl.iidm.network.TapChanger<?, ?, ?, ?> tapChanger, String tapChangerId, int closestNeutralTapPosition, Context context) {
+        Integer validNormalStep = null;
         OptionalInt normalStep = getNormalStep(tw, tapChangerId);
+        if (normalStep.isPresent() && isValidTapPosition(tapChanger, normalStep.getAsInt())) {
+            validNormalStep = normalStep.getAsInt();
+        }
         OptionalInt neutralPosition = tapChanger.getNeutralPosition();
-        return getDefaultValue(normalStep.isPresent() ? normalStep.getAsInt() : null,
+        return getDefaultValue(validNormalStep,
                 tapChanger.getTapPosition(),
                 neutralPosition.isPresent() ? neutralPosition.getAsInt() : null,
                 closestNeutralTapPosition,
@@ -358,7 +358,7 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
     }
 
     private static OptionalInt findTapPosition(PropertyBag p) {
-        double tapPosition = p.asDouble(CgmesNames.STEP, p.asDouble(CgmesNames.SV_TAP_STEP));
+        double tapPosition = p.asDouble(CgmesNames.STEP);
         return Double.isFinite(tapPosition) ? OptionalInt.of(AbstractObjectConversion.fromContinuous(tapPosition)) : OptionalInt.empty();
     }
 
@@ -389,28 +389,24 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         return Double.isFinite(tapPosition) ? OptionalInt.of(AbstractObjectConversion.fromContinuous(tapPosition)) : OptionalInt.empty();
     }
 
-    private static <C extends Connectable<C>> String findTapChangerId(Connectable<C> tw, String propertyTag) {
-        List<String> tcIds = tw.getAliases().stream().filter(alias -> isValidTapChangerIdAlias(tw, alias, tw.getAliasType(alias).orElse(null), propertyTag)).toList();
+    private static <C extends Connectable<C>> String findTapChangerId(C tw, String propertyTag) {
+        List<String> tcIds = tw.getAliases()
+            .stream()
+            .filter(alias -> isValidTapChangerIdAlias(tw, alias, tw.getAliasType(alias).orElseThrow(), propertyTag))
+            .toList();
         if (tcIds.size() == 1) {
-            return tcIds.get(0);
+            return tcIds.getFirst();
         } else {
             throw new ConversionException("unexpected tapChangerId for transformer " + tw.getId());
         }
     }
 
-    private static boolean isValidTapChangerIdAlias(Connectable<?> connectable, String alias, String aliasType, String propertyTag) {
-        return alias != null && aliasType != null && aliasType.contains(propertyTag) && !isHiddenTapChanger(connectable, alias);
+    private static <C extends Connectable<C>> boolean isValidTapChangerIdAlias(C tw, String alias, String aliasType, String propertyTag) {
+        return alias != null && aliasType != null && aliasType.contains(propertyTag) && !isHiddenTapChanger(tw, alias);
     }
 
-    private static <C extends Connectable<C>> boolean isHiddenTapChanger(Connectable<C> tw, String tapChangerId) {
-        CgmesTapChangers<C> cgmesTcs = tw.getExtension(CgmesTapChangers.class);
-        if (cgmesTcs != null) {
-            CgmesTapChanger cgmesTc = cgmesTcs.getTapChanger(tapChangerId);
-            if (cgmesTc != null) {
-                return cgmesTc.isHidden();
-            }
-        }
-        return false;
+    private static <C extends Connectable<C>> boolean isHiddenTapChanger(C tw, String tapChangerId) {
+        return getCgmesTapChanger(tw, tapChangerId).map(CgmesTapChanger::isHidden).orElse(false);
     }
 
     private static double getDefaultTargetV(com.powsybl.iidm.network.RatioTapChanger ratioTapChanger, Context context) {
@@ -434,15 +430,8 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
         return isAllowedToRegulate && !previousTapChangerIsRegulatingOn;
     }
 
-    public static <C extends Connectable<C>> OptionalInt getNormalStep(Connectable<C> tw, String tapChangerId) {
-        CgmesTapChangers<C> cgmesTcs = tw.getExtension(CgmesTapChangers.class);
-        if (cgmesTcs != null) {
-            CgmesTapChanger cgmesTc = cgmesTcs.getTapChanger(tapChangerId);
-            if (cgmesTc != null) {
-                return cgmesTc.getStep();
-            }
-        }
-        return OptionalInt.empty();
+    public static <C extends Connectable<C>> OptionalInt getNormalStep(C tw, String tapChangerId) {
+        return getCgmesTapChanger(tw, tapChangerId).map(CgmesTapChanger::getStep).orElse(OptionalInt.empty());
     }
 
     public static int getClosestNeutralStep(com.powsybl.iidm.network.RatioTapChanger rtc) {
@@ -457,5 +446,18 @@ public abstract class AbstractTransformerConversion extends AbstractConductingEq
                 .min(Comparator.comparingDouble(entry -> Math.abs(entry.getValue().getAlpha())))
                 .map(Map.Entry::getKey)
                 .orElse(ptc.getLowTapPosition());
+    }
+
+    public static <C extends Connectable<C>> Optional<CgmesTapChanger> getCgmesTapChanger(C transformer, String cgmesTapChangerId) {
+        if (cgmesTapChangerId != null) {
+            CgmesTapChangers<C> cgmesTapChangers = transformer.getExtension(CgmesTapChangers.class);
+            if (cgmesTapChangers != null) {
+                CgmesTapChanger cgmesTapChanger = cgmesTapChangers.getTapChanger(cgmesTapChangerId);
+                if (cgmesTapChanger != null) {
+                    return Optional.of(cgmesTapChanger);
+                }
+            }
+        }
+        return Optional.empty();
     }
 }
